Item CSS fix on mobiles

--- a/src/components/lightbox/lightbox-item.sass
+++ b/src/components/lightbox/lightbox-item.sass
@@ -50,8 +50,8 @@
       margin: 0 auto
     @media screen and (max-width: 767px)
       .reactbox-lightbox-item-content
-        left: 6px
-        right: 6px
+        margin-left: 6px
+        margin-right: 6px
         max-width: none
         width: auto
   &.reactbox-description-right
